--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="dark">
 
-    <strong>Made on 💻 with ❤️ by <a target="_blank" href="https://discord.com/users/709481084286533773" class="footer-link">" Rome. 🧸</strong> 
+    <strong>Made on 💻 with ❤️ by <a target="_blank" href="https://dsc.bio/romedev" class="footer-link">" Rome. 💤</strong> 
 
 </footer>
