--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>4O4 - Error</title>
-        <meta charset="utf-8">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+        <title>DrakeBot - Error 404</title>
+		<link rel="icon" type="image/ico" href="/img/logo.ico" />
+		<link rel="stylesheet" type="text/css" href="/css/404.css"/>   
+	
+		<meta name="description" content="Erreur 404: Ressource introuvable">
+		<meta name="author" content="Rome">
     </head>
 	<body>
 
-		<h1>404</h1>
-		<p> On dirai que cette page n'existe pas. Etes vous sur de l'url ?</p>
+		<div id="notfound">
+			<div class="notfound">
+				<div class="notfound-404">
+					<h1>404</h1>
+				</div>
+				<h2>Oops! Nothing was found</h2>
+				<p>On dirai que cette page n'existe pas. Etes vous sur de l'url ?</p> <a href="https://rome-dev.fr">Return to homepage</a></p>
+			</div>
+		</div>
 
 		<div class = "footer">
             <%- include('includes/footer') %>
