🔗 Update drakebot's invite link

--- a/views/drakebot.ejs
+++ b/views/drakebot.ejs
@@ -42,7 +42,7 @@
 
         <h3 id="text-center-interactive">Déjà sur <%= serverCount %> serveurs avec <%= userCount %> membres</h3>
 
-        <button type="button" onclick="window.open('https://discord.com/oauth2/authorize?client_id=762965943529766912&permissions=8&scope=bot','_blank');" class="add-link" style="font-size: 17px;">
+        <button type="button" onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=762965943529766912&permissions=2117414007&redirect_uri=https%3A%2F%2Fdrakebot.xyz&scope=bot%20applications.commands','_blank');" class="add-link" style="font-size: 17px;">
             <strong>Ajouter le bot</strong >
         </button>
     </div>
