--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,1 @@
-<footer class="dark">
-
-    <strong>Made on 💻 with ❤️ by <a target="_blank" href="https://dsc.bio/romedev" class="footer-link">" Rome. 💤</strong> 
-
-</footer>
+<span>Website designed by <a href="https://discords.com/bio/p/maxiairforce" target="_blank">MaxiAirforce</a> & <a href="https://discords.com/bio/p/romedev" target="_blank">Rome</a> (based from an open source template) | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
