--- a/views/drakebot.ejs
+++ b/views/drakebot.ejs
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -7,56 +8,143 @@
 
     <title>DrakeBot - Home</title>
     <link rel="icon" type="image/ico" href="/img/logo.ico" />
-    <link rel="stylesheet" type="text/css" href="/css/drakebot.css"/>   
+
+    <link rel="stylesheet" type="text/css" href="/css/drakebot-design.css"/>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
     <meta name="description" content="DrakeBot est un bot discord de Moderation, d'Administration et d'Economie.">
     <meta name="author" content="Rome">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
 </head>
-
 <body>
-
-    <div class="header">
-        <header>
-            <button class="boutonDeroulant" onclick="deroulerMenu()">Menu</button>
-            <nav class="doitApparaitreApresCliqueSurBoutonDeroulant" id="d1">
-                <ul>
-                    <li>
-                        <a href="/drakebot/commands" class="doitApparaitre" onclick="deroulerMenu()">Commandes</a>
-                    </li>
-                    <li>
-                        <a href="/drakebot/staff" class="doitApparaitre" onclick="deroulerMenu()">Staff</a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://top.gg/bot/762965943529766912/vote" class="doitApparaitre" onclick="deroulerMenu()">Votes</a>
-                    </li>
-                    <li>
-                        <a href="https://discord.gg/nYa8UD9Tfv" target="_blank" class="doitApparaitre" onclick="deroulerMenu()">Support</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
     </div>
 
-    <div class="center">
-        <h1>DrakeBot</h1>
+    <nav class="navbar">
+        <div class="max-width">
+            <div class="logo"><a href="#home">Drake<span>Bot</span></a></div>
+            <ul class="menu">
+                <li><a href="#home" class="menu-btn">Accueil</a></li>
+                <li><a href="#about" class="menu-btn">Commandes</a></li>
+                <li><a href="https://top.gg/bot/762965943529766912/vote" target="_blank" class="menu-btn">Votes</a></li>
+                <li><a href="https://status.drakebot.xyz" target="_blank" class="menu-btn">Status</a></li>
+                <li><a href="#staff" class="menu-btn">Staff</a></li>
+                <li><a href="https://discord.com/oauth2/authorize?client_id=762965943529766912&redirect_uri=https%3A%2F%2Frome-dev.fr%2Fdrakebot&response_type=token&scope=identify" class="menu-btn" id="login">Login</a></li>
+            </ul>
+            
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </nav>
 
-        <h3 id="text-center-interactive">Déjà sur <%= serverCount %> serveurs avec <%= userCount %> membres</h3>
 
-        <button type="button" onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=762965943529766912&permissions=2117414007&redirect_uri=https%3A%2F%2Fdrakebot.xyz&scope=bot%20applications.commands','_blank');" class="add-link" style="font-size: 17px;">
-            <strong>Ajouter le bot</strong >
-        </button>
-    </div>
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
 
-    <div class="script">
-        <script src="/js/light.js"></script>
-        <script src="/js/deroulerMenu.js"></script>
-    </div>
+                <div class="text-2">DrakeBot</div>
+                <div class="text-3">Bot <span class="typing"></span></div>
+                <a href="https://discord.com/oauth2/authorize?client_id=762965943529766912&permissions=36477201527&redirect_uri=https%3A%2F%2Frome-dev.fr%2Fdrakebot&response_type=code&scope=applications.commands%20bot">Ajouter le bot</a>
+            </div>
+        </div>
+    </section>
 
-    <div class = "footer">
+
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">Description</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="https://cdn.discordapp.com/attachments/766782356266549258/867154616068210698/image0.png" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">DrakeBot est un bot <span class="typing-2"></span></div>
+                    <p>DrakeBot possède plus de 80 commandes dans l'Administration, la Modération, l'Economie, le fun (parce que c'est bien de rigoler un peu de temps en temps) et le leveling (C'est un système qui permet de gagner de l'experience et des niveaux en envoyant des messages. Vous pouvez configurer des récompenses pour un certain niveau).  </p>
+                    <a href="https://docs.drakebot.xyz/commands" target="_blank">Listes des commandes</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Pourquoi ajouter DrakeBot ?</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-shield-alt"></i>
+                        <div class="text">Administration</div>
+                        <p>DrakeBot vous permettra de Gérer votre serveur facilement.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-record-vinyl"></i>
+                        <div class="text">Economie</div>
+                        <p>DrakeBot possède également un système de level et d'argent pour récompenser les membres actif de votre serveur.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-tools"></i>
+                        <div class="text">Modération</div>
+                        <p>Grâce aux outils de modération de DrakeBot, vous pourrez maintenir un climat agréable sur votre serveur.</p>
+                    </div>
+                </div>
+               </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="staff" id="staff">
+        <div class="max-width">
+            <h2 class="title">Staff</h2>
+            <div class="carousel owl-carousel">
+
+                <div class="card">
+                    <div class="box">
+                        <img src=<%= support[1].avatar %> alt="">
+                        <div class="text"><%= support[1].name %></div>
+                        <p>Website designer</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src=<%= owner.avatar %> alt="">
+                        <div class="text"><%= owner.name %></div>
+                        <p>Owner & Developer</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src=<%= support[0].avatar %> alt="">
+                        <div class="text"><%= support[0].name %></div>
+                        <p>Support member</p>
+                    </div>
+                </div>
+         
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
         <%- include('includes/footer') %>
-    </div>
+    </footer>
 
+    <script src="/js/typing.js"></script>
+    <script src="/js/login.js"></script>
 </body>
-
 </html>
-
