--- a/views/drakebot.ejs
+++ b/views/drakebot.ejs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>DrakeBot - Home</title>
-    <link rel="icon" type="image/ico" href="/img/logo.ico" />
+    <link rel="icon" type="image/ico" href="/img/logo.ico"/>
+    <link href="https://rome-dev.fr/drakebot" rel="canonical"/>
 
     <link rel="stylesheet" type="text/css" href="/css/drakebot-design.css"/>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/> 
@@ -63,7 +64,7 @@
             <h2 class="title">Description</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://cdn.discordapp.com/attachments/766782356266549258/867154616068210698/image0.png" alt="">
+                    <img src="https://cdn.discordapp.com/attachments/766782356266549258/867154616068210698/image0.png" alt="The logo of DrakeBot">
                 </div>
                 <div class="column right">
                     <div class="text">DrakeBot est un bot <span class="typing-2"></span></div>
@@ -113,7 +114,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <img src=<%= support[1].avatar %> alt="">
+                        <img src=<%= support[1].avatar %> alt="MaxAirForce's avatar">
                         <div class="text"><%= support[1].name %></div>
                         <p>Website designer</p>
                     </div>
@@ -121,7 +122,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <img src=<%= owner.avatar %> alt="">
+                        <img src=<%= owner.avatar %> alt="Rome's avatar">
                         <div class="text"><%= owner.name %></div>
                         <p>Owner & Developer</p>
                     </div>
@@ -129,7 +130,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <img src=<%= support[0].avatar %> alt="">
+                        <img src=<%= support[0].avatar %> alt="4ever's avatar">
                         <div class="text"><%= support[0].name %></div>
                         <p>Support member</p>
                     </div>
