--- a/views/drakebot.ejs
+++ b/views/drakebot.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>DrakeBot - Home</title>
+    <title>DrakeBot</title>
     <link rel="icon" type="image/ico" href="/img/logo.ico"/>
     <link href="https://rome-dev.fr/drakebot" rel="canonical"/>
 
