🤖 Set DrakeBot as main website

--- a/views/drakebot.ejs
+++ b/views/drakebot.ejs
@@ -8,7 +8,7 @@
 
     <title>DrakeBot</title>
     <link rel="icon" type="image/ico" href="/img/logo.ico"/>
-    <link href="https://rome-dev.fr/drakebot" rel="canonical"/>
+    <link href="https://drakebot.xyz" rel="canonical"/>
     <meta name="description" content="DrakeBot est un bot discord de Moderation, d'Administration et d'Economie.">
 
     <link rel="stylesheet" type="text/css" href="/css/drakebot-design.css"/>  
